Add new simple get service and update swag documents.
