# simple-rest-api-with-swagger/docs/swagger.yaml
@@ -105,4 +105,49 @@ paths:
                   type: string
               type: object
       summary: Create new token
+  /get-token:
+    get:
+      consumes:
+      - application/json
+      description: Get token
+      operationId: get-token
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/responses.JSONSuccessResult'
+            - properties:
+                code:
+                  type: integer
+                data:
+                  $ref: '#/definitions/models.CreateTokenResponse'
+                message:
+                  type: string
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/responses.JSONSuccessResult'
+            - properties:
+                code:
+                  type: integer
+                message:
+                  type: string
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            allOf:
+            - $ref: '#/definitions/responses.JSONInternalErrorResult'
+            - properties:
+                code:
+                  type: integer
+                message:
+                  type: string
+              type: object
+      summary: Get token
 swagger: "2.0"
